# wordleguess

./: .gitignore  Cargo.toml  LICENSE.md
.github/workflows/: release-builds.yml
src/: main.rs  words-scored.txt  words.txt
