[package]
name = "wordleguess"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Tool to guess solutions for Wordle."
homepage = "https://github.com/kade-robertson/wordleguess"
repository = "https://github.com/kade-robertson/wordleguess"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
text_io = "0.1.9"
colored = "2.0.0"
float-ord = "0.3.2"

[profile.release]
opt-level = "z"